--- a/reactive-sequence.cabal
+++ b/reactive-sequence.cabal
@@ -16,30 +16,22 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Data.EitherBoth
-                     , Reactive.Sequence
+  exposed-modules:     Reactive.Sequence
+                     , Data.EitherBoth
   -- other-modules:       
-  other-extensions:    AutoDeriveTypeable
-                     , RecursiveDo
+  other-extensions:    RecursiveDo
                      , ScopedTypeVariables
                      , GADTs
                      , StandaloneDeriving
                      , DeriveFunctor
                      , GeneralizedNewtypeDeriving
-                     , KindSignatures
-                     , RankNTypes
-                     , MultiParamTypeClasses
                      , FlexibleInstances
                      , FlexibleContexts
-                     , TypeFamilies
-                     , DataKinds
-                     , UnicodeSyntax
-                     , UndecidableInstances
 
   build-depends:       base >=4.8 && <4.9
-                     , bifunctors >=5.1 && <5.2
                      , transformers >=0.4 && <0.5
                      , semigroups >=0.17 && <0.19
                      , reactive-banana >=1.0 && <1.1
+                     , bifunctors
   -- hs-source-dirs:      
   default-language:    Haskell2010
