--- a/reactive-sequence.cabal
+++ b/reactive-sequence.cabal
@@ -16,8 +16,9 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
+
   exposed-modules:     Reactive.Sequence
-                     , Data.EitherBoth
+
   -- other-modules:       
   other-extensions:    RecursiveDo
                      , ScopedTypeVariables
@@ -32,6 +33,10 @@ library
                      , transformers >=0.4 && <0.5
                      , semigroups >=0.17 && <0.19
                      , reactive-banana >=1.0 && <1.1
-                     , bifunctors
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+
+source-repository head
+  type: git
+  location: https://github.com/avieth/reactive-sequence
